# sagemaker-docs

./: README.md  mistral-finetune-on-sagemaker.ipynb  mistral-ocr-on-sagemaker.ipynb  mistral-on-sagemaker.ipynb  pyproject.toml
data/: config.yaml  training.jsonl  validation.jsonl
samples/completion/batch/: input.jsonl  output_200.jsonl
samples/completion/realtime/: input.json  output_200.json
samples/ocr/realtime/: input.json  output_200.json
